# api-saagie

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  .pypirc  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  querySaagieApi.py  query_saagie_api.py  setup.py  test_api_saagie.py  test_postman.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflow/: unit-tests.yml
.github/workflows/: build-and-test-pr.yml  notifs.yml  release.yml  trello.yml  trello_update.yml  unit-tests.yml
docs/: README.rst  conf.py  index.rst
docs/Apps/: count_history_statuses.rst  create_by_catalog.rst  create_by_docker.rst  delete_app.rst  edit_app.rst  export_app.rst  get_apps.rst  get_history_statuses.rst  get_id_by_name.rst  get_runtime_label_by_id.rst  get_stats.rst  import_app.rst  index.rst  list_apps.rst  list_apps_minimal.rst  rollback_app.rst  run_app.rst  stop_app.rst  upgrade_app.rst
docs/Conditions/: check_condition.rst  count_expression_log.rst  get_instance_log_via_id.rst  get_instance_logs_via_pipeline_instance_id.rst  index.rst
docs/Docker Credentials/: create_cred.rst  delete_cred.rst  delete_cred_username.rst  get_info_cred.rst  get_info_username.rst  index.rst  list_cred.rst  update_cred.rst  update_cred_username.rst
docs/Environment Variables/: create_env.rst  create_update_env.rst  delete_env.rst  index.rst  list_env.rst  test.rst  update_env.rst
docs/Groups/: create_group.rst  delete_group.rst  edit_permissions.rst  export_groups.rst  get_group_permission.rst  get_group_users.rst  import_groups.rst  index.rst  list_groups.rst
docs/Jobs/: count_instances_by_status.rst  create_job.rst  create_or_upgrade_job.rst  delete_instances.rst  delete_instances_by_selector.rst  delete_job.rst  delete_versions.rst  duplicate_job.rst  edit_job.rst  export_job.rst  get_info.rst  get_instance.rst  id_from_name.rst  import_job.rst  index.rst  list_for_project.rst  list_jobs_minimal.rst  rollback_job.rst  run_job.rst  run_job_callback.rst  stop_job.rst  upgrade_job_id.rst  upgrade_job_name.rst
docs/Pipelines/: create_or_upgrade_pipeline.rst  create_pipeline.rst  delete_pipeline.rst  edit_pipeline.rst  export_pipeline.rst  get_info_pipeline.rst  get_instance_pipeline.rst  get_pipeline.rst  import_pipeline.rst  index.rst  list_pipeline.rst  list_pipeline_minimal.rst  rollback_pipeline.rst  run_pipeline.rst  run_pipeline_callback.rst  stop_pipeline.rst  upgrade_pipeline.rst
docs/Platform/: get_cluster_capacity.rst  get_platform_info.rst  get_repositories_info.rst  index.rst
docs/Profiles/: edit_profile.rst  export_profiles.rst  get_info.rst  index.rst  list_profiles.rst
docs/Projects/: create_project.rst  delete_project.rst  edit_project.rst  exporting_project.rst  get_app_technologies.rst  get_id.rst  get_info_project.rst  get_job_technologies.rst  get_rights_project.rst  importing_project.rst  index.rst  list_projects.rst
docs/Repositories/: create_repo_file.rst  create_repo_url.rst  delete_repo.rst  edit_repo.rst  get_info_repo.rst  index.rst  list_repo.rst  revert_lastsync_repo.rst  synchro_repo.rst
docs/Storages/: create_storage.rst  delete_storage.rst  edit_storage.rst  get_info_storage.rst  index.rst  list_storage.rst  unlink_storage.rst
docs/Technologies/: get_available_technologies.rst  get_runtimes.rst  get_technology_by_id.rst  index.rst
docs/Users/: create_user.rst  delete_user.rst  edit_user_password.rst  export_users.rst  get_info.rst  import_users.rst  index.rst  list_users.rst
querySaagieApi/: __init__.py  gql_template.py  querySaagieApi.py  querySaagieApiProject.py  tests.py  utils.py
querySaagieApi/tests/: queryProjectTest.py  schema.graphqls
saagieapi/: __init__.py  compatibility_matrix.json  gql_queries.py  saagie_api.py
saagieapi/apps/: __init__.py  apps.py  gql_queries.py
tests/: apps_unit_test.py  docker_credentials_unit_test.py  env_vars_unit_test.py  jobs_unit_test.py  pipelines_unit_test.py  projectTest.py  projects_unit_test.py  saagie_api_integration_test.py  saagie_api_unit_test.py  schema.graphqls  test_env_vars.py  test_gql_template.py  test_projects.py  test_projects_integration.py
(+101 files in other folders)
