[tool.poetry]
name = "saagieapi"
version = "2.2.6"
description = "Python API to interact with Saagie"
authors = ["Saagie"]
license = "GLWTPL"
readme = "README.md"
repository = "https://github.com/saagie/api-saagie"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.27.0"
gql = "^3.0.0"
pytz = "^2021.1"
croniter = "^1.0.1"
requests_toolbelt = "^0.9.1"
deprecation = "^2.1.0"
rich = "^12.3.0"

[tool.poetry.dev-dependencies]
python-semantic-release = "7.28.1"
pytest = "^7.1.1"
pylint = "^2.13.7"
isort = "^5.10.1"
black = "^22.3.0"
pre-commit = "^2.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_toml = "pyproject.toml:tool.poetry.version"
tag_format = "{version}"
build_command = "poetry build"
commit_author = "Team Service <service@saagie.com>"
commit_parser = "semantic_release.history.emoji_parser"

[tool.pylint.master]
output-format = "colorized"

[tool.pylint.messages_control]
disable = [
    "missing-function-docstring",
    "missing-module-docstring",
    "missing-class-docstring",
    "unsubscriptable-object",
    "too-many-arguments",
    "too-many-locals",
    "too-few-public-methods",
    "too-many-public-methods",
    "wildcard-import",
]

[tool.pylint.format]
max-line-length = 120

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | .yaml
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip_glob = ["docs", "notes"]